--- a/_config.yml
+++ b/_config.yml
@@ -42,22 +42,22 @@ avatar: "/static/img/desh_new.jpeg"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Desh Raj
-  email: "draj@cs.jhu.edu"
-  github: desh2608    # eg. daattali
-  linkedin: rdesh26
-  twitter: rdesh26
+  name: Yearn 
+  email: "yangby35@link.cuhk.edu.hk"
+  github: Flechazo-3q    # eg. daattali
+  # linkedin: rdesh26
+  # twitter: rdesh26
 
 # Select which links to show in the footer
 footer-links-active:
   rss: false
   facebook: false
   email: true
-  twitter: true
+  twitter: false
   google-plus: false
   github: true
   reddit: false
-  linkedin: true
+  linkedin: false
   xing: false
   stackoverflow: false
   snapchat: false
@@ -68,21 +68,22 @@ footer-links-active:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
+  twitter: false
   facebook: false
-  google: true
+  google: false
   linkedin: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "desh2608.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "Flechazo-3q.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "desh2608-github-io"
+#disqus: "desh2608-github-io"
+disqus: "Flechazo-3q-github-io"
 
 # Fill in your Google Analytics ID to track your website using GA
-google_analytics: "UA-121781547-1"
+# google_analytics: "UA-121781547-1"
 
 # Google Tag Manager ID
 #gtm: ""
