Update author name and email in config

--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ avatar: "/static/img/github_myself_photo.jpg"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Yearn 
-  email: "yangby35@link.cuhk.edu.hk"
+  name: Boey 
+  email: "yangby35@gmail.com"
   github: Flechazo-3q    # eg. daattali
   # linkedin: rdesh26
   # twitter: rdesh26
